--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@upstash/redis": "^1.35.0",
     "class-variance-authority": "^0.7.1",
