Add Cult UI expandable card

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@upstash/redis": "^1.35.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.515.0",
+    "motion": "^12.18.1",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-use-measure": "^2.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
